gramatica/output/AlgebraRelacionalParser.java
// $ANTLR null G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g 2023-07-04 17:34:48

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class AlgebraRelacionalParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "CAD", "NUM", "WS", 
		"'!='", "'('", "')'", "','", "'-'", "'.'", "'<'", "'<='", "'='", "'>'", 
		"'>= '", "'AGRUPAR'", "'AND'", "'ASC'", "'AVG'", "'COUNT'", "'CRUZ'", 
		"'DESC'", "'DIFERENCIA'", "'DIVISION'", "'INTER'", "'MAX'", "'MIN'", "'OR'", 
		"'ORDENAR'", "'PROYECTAR'", "'RENOMBRAR'", "'REUNION'", "'REUNION_EXT_DER'", 
		"'REUNION_EXT_FULL'", "'REUNION_EXT_IZQ'", "'REUNION_NATURAL'", "'SELECCIONAR'", 
		"'SUM'", "'UNION'", "'\\u0027'", "'agrupar'", "'and'", "'asc'", "'avg'", 
		"'count'", "'cruz'", "'desc'", "'diferencia'", "'division'", "'inter'", 
		"'max'", "'min'", "'or'", "'ordenar'", "'proyectar'", "'renombrar'", "'reunion'", 
		"'reunion_ext_der'", "'reunion_ext_full'", "'reunion_ext_izq'", "'reunion_natural'", 
		"'seleccionar'", "'sum'", "'union'"
	};
	public static final int EOF=-1;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int ASSIGN=4;
	public static final int CAD=5;
	public static final int NUM=6;
	public static final int WS=7;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public AlgebraRelacionalParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public AlgebraRelacionalParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return AlgebraRelacionalParser.tokenNames; }
	@Override public String getGrammarFileName() { return "G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g"; }



	// $ANTLR start "st"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:1: st : ( asg | con ) ;
	public final void st() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:4: ( ( asg | con ) )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:6: ( asg | con )
			{
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:6: ( asg | con )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CAD) ) {
				int LA1_1 = input.LA(2);
				if ( (LA1_1==ASSIGN) ) {
					alt1=1;
				}
				else if ( (LA1_1==24||LA1_1==26||LA1_1==28||(LA1_1 >= 36 && LA1_1 <= 39)||LA1_1==42||LA1_1==49||LA1_1==51||LA1_1==53||(LA1_1 >= 61 && LA1_1 <= 64)||LA1_1==67) ) {
					alt1=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA1_0==9||(LA1_0 >= 22 && LA1_0 <= 23)||(LA1_0 >= 29 && LA1_0 <= 30)||(LA1_0 >= 32 && LA1_0 <= 34)||(LA1_0 >= 40 && LA1_0 <= 41)||(LA1_0 >= 47 && LA1_0 <= 48)||(LA1_0 >= 54 && LA1_0 <= 55)||(LA1_0 >= 57 && LA1_0 <= 59)||(LA1_0 >= 65 && LA1_0 <= 66)) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:8: asg
					{
					pushFollow(FOLLOW_asg_in_st12);
					asg();
					state._fsp--;

					}
					break;
				case 2 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:3:14: con
					{
					pushFollow(FOLLOW_con_in_st16);
					con();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "st"



	// $ANTLR start "asg"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:4:1: asg : rel ASSIGN con ;
	public final void asg() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:4:5: ( rel ASSIGN con )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:4:7: rel ASSIGN con
			{
			pushFollow(FOLLOW_rel_in_asg25);
			rel();
			state._fsp--;

			match(input,ASSIGN,FOLLOW_ASSIGN_in_asg27); 
			pushFollow(FOLLOW_con_in_asg29);
			con();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "asg"



	// $ANTLR start "con"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:1: con : ( bin | select | proy | renom1 | renom2 | renom3 | join | groupby | orderby | agregation | division | reunatural | reuizq | reuder | reuext ) ;
	public final void con() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:5: ( ( bin | select | proy | renom1 | renom2 | renom3 | join | groupby | orderby | agregation | division | reunatural | reuizq | reuder | reuext ) )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:7: ( bin | select | proy | renom1 | renom2 | renom3 | join | groupby | orderby | agregation | division | reunatural | reuizq | reuder | reuext )
			{
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:7: ( bin | select | proy | renom1 | renom2 | renom3 | join | groupby | orderby | agregation | division | reunatural | reuizq | reuder | reuext )
			int alt2=15;
			switch ( input.LA(1) ) {
			case CAD:
				{
				switch ( input.LA(2) ) {
				case 24:
				case 26:
				case 28:
				case 42:
				case 49:
				case 51:
				case 53:
				case 67:
					{
					alt2=1;
					}
					break;
				case 39:
				case 64:
					{
					alt2=12;
					}
					break;
				case 38:
				case 63:
					{
					alt2=13;
					}
					break;
				case 36:
				case 61:
					{
					alt2=14;
					}
					break;
				case 37:
				case 62:
					{
					alt2=15;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case 40:
			case 65:
				{
				alt2=2;
				}
				break;
			case 33:
			case 58:
				{
				alt2=3;
				}
				break;
			case 34:
			case 59:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==9) ) {
					alt2=6;
				}
				else if ( (LA2_4==CAD) ) {
					int LA2_14 = input.LA(3);
					if ( (LA2_14==9) ) {
						int LA2_16 = input.LA(4);
						if ( (LA2_16==CAD) ) {
							int LA2_19 = input.LA(5);
							if ( (LA2_19==11) ) {
								alt2=4;
							}
							else if ( (LA2_19==10) ) {
								int LA2_24 = input.LA(6);
								if ( (LA2_24==9) ) {
									alt2=4;
								}
								else if ( (LA2_24==EOF) ) {
									alt2=5;
								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 24, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 19, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 16, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 14, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 9:
				{
				int LA2_5 = input.LA(2);
				if ( (LA2_5==CAD) ) {
					int LA2_15 = input.LA(3);
					if ( (LA2_15==10) ) {
						int LA2_17 = input.LA(4);
						if ( (LA2_17==35||LA2_17==60) ) {
							alt2=7;
						}
						else if ( (LA2_17==19||LA2_17==44) ) {
							alt2=8;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 17, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA2_15==11) ) {
						int LA2_18 = input.LA(4);
						if ( (LA2_18==CAD) ) {
							int LA2_22 = input.LA(5);
							if ( (LA2_22==10) ) {
								int LA2_25 = input.LA(6);
								if ( (LA2_25==19||LA2_25==44) ) {
									alt2=8;
								}
								else if ( (LA2_25==9) ) {
									alt2=11;
								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 25, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}
							else if ( (LA2_22==11) ) {
								alt2=8;
							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 22, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 18, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 15, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 32:
			case 57:
				{
				alt2=9;
				}
				break;
			case 22:
			case 23:
			case 29:
			case 30:
			case 41:
			case 47:
			case 48:
			case 54:
			case 55:
			case 66:
				{
				alt2=10;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:9: bin
					{
					pushFollow(FOLLOW_bin_in_con38);
					bin();
					state._fsp--;

					}
					break;
				case 2 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:15: select
					{
					pushFollow(FOLLOW_select_in_con42);
					select();
					state._fsp--;

					}
					break;
				case 3 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:24: proy
					{
					pushFollow(FOLLOW_proy_in_con46);
					proy();
					state._fsp--;

					}
					break;
				case 4 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:31: renom1
					{
					pushFollow(FOLLOW_renom1_in_con50);
					renom1();
					state._fsp--;

					}
					break;
				case 5 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:40: renom2
					{
					pushFollow(FOLLOW_renom2_in_con54);
					renom2();
					state._fsp--;

					}
					break;
				case 6 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:49: renom3
					{
					pushFollow(FOLLOW_renom3_in_con58);
					renom3();
					state._fsp--;

					}
					break;
				case 7 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:58: join
					{
					pushFollow(FOLLOW_join_in_con62);
					join();
					state._fsp--;

					}
					break;
				case 8 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:65: groupby
					{
					pushFollow(FOLLOW_groupby_in_con66);
					groupby();
					state._fsp--;

					}
					break;
				case 9 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:75: orderby
					{
					pushFollow(FOLLOW_orderby_in_con70);
					orderby();
					state._fsp--;

					}
					break;
				case 10 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:85: agregation
					{
					pushFollow(FOLLOW_agregation_in_con74);
					agregation();
					state._fsp--;

					}
					break;
				case 11 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:98: division
					{
					pushFollow(FOLLOW_division_in_con78);
					division();
					state._fsp--;

					}
					break;
				case 12 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:109: reunatural
					{
					pushFollow(FOLLOW_reunatural_in_con82);
					reunatural();
					state._fsp--;

					}
					break;
				case 13 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:122: reuizq
					{
					pushFollow(FOLLOW_reuizq_in_con86);
					reuizq();
					state._fsp--;

					}
					break;
				case 14 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:131: reuder
					{
					pushFollow(FOLLOW_reuder_in_con90);
					reuder();
					state._fsp--;

					}
					break;
				case 15 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:5:140: reuext
					{
					pushFollow(FOLLOW_reuext_in_con94);
					reuext();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "con"



	// $ANTLR start "bin"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:8:1: bin : ( rel ( 'UNION' | 'union' ) rel | rel ( 'INTER' | 'inter' ) rel | rel ( 'DIFERENCIA' | 'diferencia' ) rel | rel ( 'CRUZ' | 'cruz' ) rel );
	public final void bin() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:8:5: ( rel ( 'UNION' | 'union' ) rel | rel ( 'INTER' | 'inter' ) rel | rel ( 'DIFERENCIA' | 'diferencia' ) rel | rel ( 'CRUZ' | 'cruz' ) rel )
			int alt3=4;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CAD) ) {
				switch ( input.LA(2) ) {
				case 42:
				case 67:
					{
					alt3=1;
					}
					break;
				case 28:
				case 53:
					{
					alt3=2;
					}
					break;
				case 26:
				case 51:
					{
					alt3=3;
					}
					break;
				case 24:
				case 49:
					{
					alt3=4;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:8:7: rel ( 'UNION' | 'union' ) rel
					{
					pushFollow(FOLLOW_rel_in_bin104);
					rel();
					state._fsp--;

					if ( input.LA(1)==42||input.LA(1)==67 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_rel_in_bin112);
					rel();
					state._fsp--;

					}
					break;
				case 2 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:9:3: rel ( 'INTER' | 'inter' ) rel
					{
					pushFollow(FOLLOW_rel_in_bin116);
					rel();
					state._fsp--;

					if ( input.LA(1)==28||input.LA(1)==53 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_rel_in_bin124);
					rel();
					state._fsp--;

					}
					break;
				case 3 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:10:3: rel ( 'DIFERENCIA' | 'diferencia' ) rel
					{
					pushFollow(FOLLOW_rel_in_bin128);
					rel();
					state._fsp--;

					if ( input.LA(1)==26||input.LA(1)==51 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_rel_in_bin136);
					rel();
					state._fsp--;

					}
					break;
				case 4 :
					// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:11:3: rel ( 'CRUZ' | 'cruz' ) rel
					{
					pushFollow(FOLLOW_rel_in_bin140);
					rel();
					state._fsp--;

					if ( input.LA(1)==24||input.LA(1)==49 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_rel_in_bin148);
					rel();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "bin"



	// $ANTLR start "select"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:13:1: select : ( 'seleccionar' | 'SELECCIONAR' ) '(' conds1 ')' '(' rel ')' ;
	public final void select() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:13:8: ( ( 'seleccionar' | 'SELECCIONAR' ) '(' conds1 ')' '(' rel ')' )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:13:10: ( 'seleccionar' | 'SELECCIONAR' ) '(' conds1 ')' '(' rel ')'
			{
			if ( input.LA(1)==40||input.LA(1)==65 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,9,FOLLOW_9_in_select161); 
			pushFollow(FOLLOW_conds1_in_select162);
			conds1();
			state._fsp--;

			match(input,10,FOLLOW_10_in_select163); 
			match(input,9,FOLLOW_9_in_select164); 
			pushFollow(FOLLOW_rel_in_select165);
			rel();
			state._fsp--;

			match(input,10,FOLLOW_10_in_select166); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "select"



	// $ANTLR start "proy"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:14:1: proy : ( 'proyectar' | 'PROYECTAR' ) '(' atts ')' '(' rel ')' ;
	public final void proy() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:14:6: ( ( 'proyectar' | 'PROYECTAR' ) '(' atts ')' '(' rel ')' )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:14:8: ( 'proyectar' | 'PROYECTAR' ) '(' atts ')' '(' rel ')'
			{
			if ( input.LA(1)==33||input.LA(1)==58 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,9,FOLLOW_9_in_proy178); 
			pushFollow(FOLLOW_atts_in_proy179);
			atts();
			state._fsp--;

			match(input,10,FOLLOW_10_in_proy180); 
			match(input,9,FOLLOW_9_in_proy181); 
			pushFollow(FOLLOW_rel_in_proy182);
			rel();
			state._fsp--;

			match(input,10,FOLLOW_10_in_proy183); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "proy"



	// $ANTLR start "renom1"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:15:1: renom1 : ( 'renombrar' | 'RENOMBRAR' ) rel '(' atts ')' '(' rel ')' ;
	public final void renom1() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:15:8: ( ( 'renombrar' | 'RENOMBRAR' ) rel '(' atts ')' '(' rel ')' )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:15:10: ( 'renombrar' | 'RENOMBRAR' ) rel '(' atts ')' '(' rel ')'
			{
			if ( input.LA(1)==34||input.LA(1)==59 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			pushFollow(FOLLOW_rel_in_renom1196);
			rel();
			state._fsp--;

			match(input,9,FOLLOW_9_in_renom1198); 
			pushFollow(FOLLOW_atts_in_renom1199);
			atts();
			state._fsp--;

			match(input,10,FOLLOW_10_in_renom1200); 
			match(input,9,FOLLOW_9_in_renom1201); 
			pushFollow(FOLLOW_rel_in_renom1202);
			rel();
			state._fsp--;

			match(input,10,FOLLOW_10_in_renom1203); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "renom1"



	// $ANTLR start "renom2"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:16:1: renom2 : ( 'renombrar' | 'RENOMBRAR' ) rel '(' rel ')' ;
	public final void renom2() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:16:8: ( ( 'renombrar' | 'RENOMBRAR' ) rel '(' rel ')' )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:16:10: ( 'renombrar' | 'RENOMBRAR' ) rel '(' rel ')'
			{
			if ( input.LA(1)==34||input.LA(1)==59 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			pushFollow(FOLLOW_rel_in_renom2216);
			rel();
			state._fsp--;

			match(input,9,FOLLOW_9_in_renom2218); 
			pushFollow(FOLLOW_rel_in_renom2219);
			rel();
			state._fsp--;

			match(input,10,FOLLOW_10_in_renom2220); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "renom2"



	// $ANTLR start "renom3"
	// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:17:1: renom3 : ( 'renombrar' | 'RENOMBRAR' ) '(' atts ')' '(' rel ')' ;
	public final void renom3() throws RecognitionException {
		try {
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:17:8: ( ( 'renombrar' | 'RENOMBRAR' ) '(' atts ')' '(' rel ')' )
			// G:\\Mi unidad\\GCAR\\gramatica\\AlgebraRelacional.g:17:10: ( 'renombrar' | 'RENOMBRAR' ) '(' atts ')' '(' rel ')'
			{
			if ( input.LA(1)==34||input.LA(1)==59 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,9,FOLLOW_9_in_renom3232); 
			pushFollow(FOLLOW_atts_in_renom3233);
			atts();
			state._fsp--;

			match(input,10,FOLLOW_10_in_renom3234); 
			match(input,9,FOLLOW_9_in_renom3235); 
			pushFollow(FOLLOW_rel_in_renom3236);
			rel();
			state._fsp--;

			match(input,10,FOLLOW_10_in_renom3237); 
			}
